Added our character's index.html file and a few images.
Wrote the HTML and added a favicon.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,43 @@
 <html>
 <head>
     <title>Static Shock</title>
+    <link rel="icon" href="img/static-avatar.jpg">
 </head>
 <body>
     <!-- header element -->
     <header>
-        <img src="img/static-avatar.jpg"
+        <img src="img/static-avatar.jpg">
         <h1>Static Shock</h1>
     </header>
 
     <!-- main element -->
     <main>
         <h2>About Static</h2>
-        <p></p>
-        <img src=""
+        <p>Static Shock is a teenager who uses his electrical powers to protect his city.</p>
+        <img src="img/static-richie.jpg">
+        <p>Static and his signature pose</p>
+
+        <!-- Characteristics -->
+        <h2>Static's Characteristics</h2>
+        <ol>
+            <li>He got his powers during an accident at the docks</li>
+            <li>He uses electricity to make a garbage can lid fly</li>
+            <li>He will always fight to keep his family and city safe</li>
+        </ol>
+        
+        <!-- Friends -->
+        <h2>Static's Friends</h2>
+        <p>As the regular high schooler Virgil Hawkins, Static made a lifelong friend in Richie. Thankfully, Richie also gains powers and can help Virgil when he becomes Static Shock. Click on the links below to read more about Richie.</p>
+        <ul>
+            <li><a target="_blank" href="https://static.fandom.com/wiki/Richie_Foley_(DCAU)">Richie Foley</a></li>
+            <li><a target="_blank" href="https://static.fandom.com/wiki/Daisy_Watkins_(DCAU)">Daisy Watkins</a></li>
+            <li><a target="_blank" href="https://static.fandom.com/wiki/Frieda_Goren_(DCAU)">Frieda Goren</a></li>
+        </ul>
     </main>
+
+    <!-- Footer element -->
+     <footer>
+        <p>This site was created during a <a target="_blank" href="https://taptapkaboom.com">Tap Tap Kaboom</a> class. &copy; Michael</p>
+     </footer>
 </body>
 </html>
