Start of CSS Lesson
I began the lesson on styling HTML websites

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Static Shock</title>
     <link rel="icon" href="img/static-avatar.jpg">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
     <!-- header element -->
