--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Static Shock</title>
     <link rel="icon" href="img/static-avatar.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Arya:wght@400;700&family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
         <h2>About Static</h2>
         <p>Static Shock is a teenager who uses his electrical powers to protect his city.</p>
         <img src="img/static-richie.jpg">
-        <p>Static and his signature pose</p>
+        <p class="caption">Static and his signature pose</p>
 
         <!-- Characteristics -->
         <h2>Static's Characteristics</h2>
